--- a/Equalizer.css
+++ b/Equalizer.css
@@ -1,3 +1,20 @@
 /* .main.css-k1vhr4.egzxvld3{
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(156,177,243,1) 100%, rgba(0,212,255,1) 100%);
 } */
+
+.css-1k0b3x4.e1fqkh3o2{
+    padding-top: 50;
+    padding-bottom:0;    
+  }
+  .css-5vibcw.e1tzin5v0{
+  position:relative;
+  bottom: 75px; 
+  }
+  
+  .block-container{
+  
+    position: relative;
+    bottom: 70px;
+  }
+
+/* 0 
