--- a/Equalizer.css
+++ b/Equalizer.css
@@ -16,5 +16,24 @@
     position: relative;
     bottom: 70px;
   }
-
+ /* sidebar */
+ .css-163ttbj {
+  position: relative;
+  top: 2px;
+  background-color: rgb(24, 126, 139);
+  z-index: 999991;
+  min-width: 244px;
+  max-width: 550px;
+  transform: none;
+  transition: transform 300ms ease 0s, min-width 300ms ease 0s, max-width 300ms ease 0s;
+  background-image:  linear-gradient(180deg,#99c6dd 0,#166d85 100%);
+}
+/* brows file */
+.css-1dhfpht {
+  display: flex;
+  -moz-box-align: center;
+  align-items: center;
+  padding: 1rem;
+  background-color: #0f6d84;
+}
 /* 0 
