FINAL FINAL FINAL

--- a/Equalizer.css
+++ b/Equalizer.css
@@ -36,4 +36,18 @@
   padding: 1rem;
   background-color: #0f6d84;
 }
-/* 0 
+ 
+
+/* .css-18e3th9{
+  height: 180 !important;
+} */
+.css-18e3th9 {
+  padding: 3.7rem 1rem 0rem !important;
+}
+.css-k1vhr4{
+  overflow:hidden !important;
+}
+h3{
+  padding: 0;
+}
+
